--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
         <nav></nav>
     </header>
     <main>
-        hello
+        <div class="modal-box">
+            <button class="btn-modal" type="button">Open Modal</button>
+        </div>
     </main>
     <footer></footer>
+
+   
 </body>
 </html>
