--- a/index.html
+++ b/index.html
@@ -19,12 +19,67 @@
         <nav></nav>
     </header>
     <main>
-        <div class="modal-box">
-            <button class="btn-modal" type="button">Open Modal</button>
+        <div class="modal-box" >
+            <button class="btn-modal" type="button" data-modal-open>Open Modal</button>
         </div>
     </main>
     <footer></footer>
 
-   
+
+    <!-- Modal window -->
+    <div class="backdrop" data-modal>
+        <div class="modal">
+            <button class="modal-close-btn" type="button" data-modal-close>
+                x
+                <!-- <svg class="modal-icon" width="16" height="16">
+                    <use href="./images/icons/icons.svg#icon-close"></use>
+                </svg> -->
+            </button>
+            <strong class="modal-title">Leave your contacts and we will call you back</strong>
+            <form class="modal-form" name="contact-forn">
+                <label class="modal-form-label" for="user_name">Name</label>
+                <div class="modal-form-field">
+                    <input class="modal-form-input" type="text" name="user_name" id="user_name" required
+                        minlength="2" />
+                    <svg class="modal-form-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-name"></use>
+                    </svg>
+                </div>
+                <label class="modal-form-label" for="user_phone">Phone</label>
+                <div class="modal-form-field">
+                    <input class="modal-form-input" type="tel" name="user_phone" id="user_phone" required minlength="12"
+                        maxlength="12" />
+                    <svg class="modal-form-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-phone"></use>
+                    </svg>
+                </div>
+                <label class="modal-form-label" for="user_email">Email</label>
+                <div class="modal-form-field">
+                    <input class="modal-form-input" type="email" name="user_email" id="user_email" required
+                        pattern="^(?=.*[a-z])(?=.*[A-Z])" />
+                    <svg class="modal-form-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-email"></use>
+                    </svg>
+                </div>
+
+                <label class="modal-form-label" for="user_message">Comment</label>
+                <textarea class="modal-form-message" name="user_message" rows="5"
+                    placeholder="Type your message..."></textarea>
+
+                <label class="modal-form-agreement">
+                    <input class="modal-form-agreement-box" type="checkbox" name="user_agreement" />
+                    <span class="modal-form-agreement-text">
+                        I accept the terms and conditions of the
+                        <a class="modal-form-agreement-link" href="">Privacy Policy</a>
+                    </span>
+                </label>
+
+                <button class="modal-btn" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
+
+
+    <script src="./js/modal.js"></script>
 </body>
 </html>
