--- a/index.html
+++ b/index.html
@@ -14,19 +14,31 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header>
         <nav></nav>
     </header>
     <main>
-        <div class="modal-box" >
+
+        <!-- 1.Button - open modal -->
+        <div class="modal-box">
             <button class="btn-modal" type="button" data-modal-open>Open Modal</button>
         </div>
+
+        <!-- 2.Mobile menu  -->
+        <button class="menu-toggle js-open-menu position-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
     </main>
     <footer></footer>
 
-
-    <!-- Modal window -->
+    <!-- 1.Modal window -->
     <div class="backdrop" data-modal>
         <div class="modal">
             <button class="modal-close-btn" type="button" data-modal-close>
@@ -79,7 +91,44 @@
         </div>
     </div>
 
+    <!-- 2.Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                <path fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
 
+        <ul class="mobile-menu">
+            <li><a href="" class="link">About</a></li>
+            <li><a href="" class="link">Products</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+            <li><a href="" class="link">Career</a></li>
+        </ul>
+
+        <p class="mobile-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt temporibus ex itaque magni
+            cupiditate, eos nam repellendus, dolorum blanditiis minus nemo ratione a odio, cumque officia sequi. Sunt,
+            voluptates dolor.</p>
+
+        <ul class="mobile-contacts list">
+            <li>
+                <a class="link" href="tel:">+11 (000) 111-11-11</a>
+            </li>
+            <li>
+                <a class="link" href="mailto:">info@devstudio.com</a>
+            </li>
+        </ul>
+    </div>
+
+    <!-- 1.Conection Modal Window -->
     <script src="./js/modal.js"></script>
+    <!-- 2. Conection Mobile Menu -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="/js/mobile-menu.js"></script>
 </body>
+
 </html>
