--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <button class="btn-modal" type="button" data-modal-open>Open Modal</button>
         </div>
 
+        
         <!-- 2.Mobile menu  -->
+        <p>Mobile menu</p>
         <button class="menu-toggle js-open-menu position-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
